--- a/preach_prob_build_log.html
+++ b/preach_prob_build_log.html
@@ -4,38 +4,42 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>14-03-2014 at 19:05.00</u><br />
-Build ended on: <u>14-03-2014 at 19:05.04</u><p />
+Build started on: <u>19-03-2014 at 19:48.24</u><br />
+Build ended on: <u>19-03-2014 at 19:48.26</u><p />
 <b>-------------- Build: Debug in preach_prob ---------------</b><br />
-mingw32-g++.exe -Wall -fexceptions  -O3 -g    -IC:\lemon\include  -c D:\Workspace\preach_prob\prob.cc -o obj\Debug\prob.o<br />
-In file included from D:\Workspace\preach_prob\prob.cc:25:<br />
+mingw32-g++.exe -Wall -fexceptions  -g    -IC:\lemon\include  -c D:\Workspace\preach_prob\prob.cc -o obj\Debug\prob.o<br />
+In file included from D:\Workspace\preach_prob\prob.cc:24:<br />
 D:\Workspace\preach_prob\preach.h: In constructor `Polynomial::Polynomial(std::map<int, std::pair<int, int>, std::less<int>, std::allocator<std::pair<const int, std::pair<int, int> > > >&, int, int, Edges_T&)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\preach.h:150: warning: `Polynomial::targetNode' will be initialized after</font><br />
-<font color="#0000ff">D:\Workspace\preach_prob\preach.h:148: warning:   `std::map<int, std::pair<int, int>, std::less<int>, std::allocator<std::pair<const int, std::pair<int, int> > > > Polynomial::edgeTerminals'</font><br />
-<font color="#0000ff">D:\Workspace\preach_prob\preach.h:163: warning:   when initialized here</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\preach.h:153: warning: `Polynomial::targetNode' will be initialized after</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\preach.h:151: warning:   `std::map<int, std::pair<int, int>, std::less<int>, std::allocator<std::pair<const int, std::pair<int, int> > > > Polynomial::edgeTerminals'</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\preach.h:166: warning:   when initialized here</font><br />
 D:\Workspace\preach_prob\prob.cc: In constructor `STVariation::STVariation(lemon::ListDigraph&, lemon::ListDigraphBase::Node&, lemon::ListDigraphBase::Node&, lemon::ListDigraphBase::Arc&, WeightMap&)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:52: warning: `STVariation::varArcRef' will be initialized after</font><br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:45: warning:   `WeightMap STVariation::wMap'</font><br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:213: warning:   when initialized here</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:51: warning: `STVariation::varArcRef' will be initialized after</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:44: warning:   `WeightMap STVariation::wMap'</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:212: warning:   when initialized here</font><br />
 D:\Workspace\preach_prob\prob.cc: In constructor `STVariation::STVariation(lemon::ListDigraph&, lemon::ListDigraphBase::Node&, lemon::ListDigraphBase::Node&, WeightMap&)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:51: warning: `STVariation::targetRef' will be initialized after</font><br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:45: warning:   `WeightMap STVariation::wMap'</font><br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:222: warning:   when initialized here</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:50: warning: `STVariation::targetRef' will be initialized after</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:44: warning:   `WeightMap STVariation::wMap'</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:221: warning:   when initialized here</font><br />
 D:\Workspace\preach_prob\prob.cc: In function `int rangeIndex(double, std::vector<double, std::allocator<double> >&)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:461: warning: comparison between signed and unsigned integer expressions</font><br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:465: warning: converting to `int' from `double'</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:477: warning: comparison between signed and unsigned integer expressions</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:481: warning: converting to `int' from `double'</font><br />
+D:\Workspace\preach_prob\prob.cc: In function `void Mutate(lemon::ListDigraph&, std::map<std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node>, double, std::less<std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node> >, std::allocator<std::pair<const std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node>, double> > >&, std::vector<Species*, std::allocator<Species*> >&)':<br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:513: warning: comparison between signed and unsigned integer expressions</font><br />
 D:\Workspace\preach_prob\prob.cc: In function `Species* removeTopSpecies(std::vector<Species*, std::allocator<Species*> >&)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:494: warning: comparison between signed and unsigned integer expressions</font><br />
-D:\Workspace\preach_prob\prob.cc: In function `Species* removeRandomSpeciesQualityBias(std::vector<Species*, std::allocator<Species*> >, double)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:509: warning: comparison between signed and unsigned integer expressions</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:522: warning: comparison between signed and unsigned integer expressions</font><br />
+D:\Workspace\preach_prob\prob.cc: In function `Species* removeRandomSpeciesQualityBias(std::vector<Species*, std::allocator<Species*> >&, double)':<br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:537: warning: comparison between signed and unsigned integer expressions</font><br />
+D:\Workspace\preach_prob\prob.cc: In function `double sumQuality(std::vector<Species*, std::allocator<Species*> >&)':<br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:551: warning: comparison between signed and unsigned integer expressions</font><br />
 D:\Workspace\preach_prob\prob.cc: In function `void Select(std::vector<Species*, std::allocator<Species*> >&)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:544: warning: comparison between signed and unsigned integer expressions</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:572: warning: comparison between signed and unsigned integer expressions</font><br />
 D:\Workspace\preach_prob\prob.cc: In function `void Geneticize(lemon::ListDigraph&, std::map<std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node>, double, std::less<std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node> >, std::allocator<std::pair<const std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node>, double> > >&, WeightMap&)':<br />
-<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:569: warning: comparison between signed and unsigned integer expressions</font><br />
+<font color="#0000ff">D:\Workspace\preach_prob\prob.cc:602: warning: comparison between signed and unsigned integer expressions</font><br />
 mingw32-g++.exe  -o bin\Debug\preach_prob.exe obj\Debug\prob.o<br />
-Output size is 2.18 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minutes, 4 seconds)</font><br />
-<font color="#0000ff">0 errors, 15 warnings</font><br />
+Output size is 2.43 MB<br />
+<font color="#0000ff">Process terminated with status 0 (0 minutes, 2 seconds)</font><br />
+<font color="#0000ff">0 errors, 17 warnings</font><br />
 </tt>
 </body>
 </html>
