class presentation - final

--- a/preach_prob_build_log.html
+++ b/preach_prob_build_log.html
@@ -4,10 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>19-03-2014 at 19:48.24</u><br />
-Build ended on: <u>19-03-2014 at 19:48.26</u><p />
-<b>-------------- Build: Debug in preach_prob ---------------</b><br />
-mingw32-g++.exe -Wall -fexceptions  -g    -IC:\lemon\include  -c D:\Workspace\preach_prob\prob.cc -o obj\Debug\prob.o<br />
+Build started on: <u>25-04-2014 at 12:43.00</u><br />
+Build ended on: <u>25-04-2014 at 12:43.04</u><p />
+<b>-------------- Build: Release in preach_prob ---------------</b><br />
+mingw32-g++.exe -Wall -fexceptions  -O2    -IC:\lemon\include  -c D:\Workspace\preach_prob\prob.cc -o obj\Release\prob.o<br />
 In file included from D:\Workspace\preach_prob\prob.cc:24:<br />
 D:\Workspace\preach_prob\preach.h: In constructor `Polynomial::Polynomial(std::map<int, std::pair<int, int>, std::less<int>, std::allocator<std::pair<const int, std::pair<int, int> > > >&, int, int, Edges_T&)':<br />
 <font color="#0000ff">D:\Workspace\preach_prob\preach.h:153: warning: `Polynomial::targetNode' will be initialized after</font><br />
@@ -36,9 +36,9 @@ D:\Workspace\preach_prob\prob.cc: In function `void Select(std::vector<Species*,
 <font color="#0000ff">D:\Workspace\preach_prob\prob.cc:572: warning: comparison between signed and unsigned integer expressions</font><br />
 D:\Workspace\preach_prob\prob.cc: In function `void Geneticize(lemon::ListDigraph&, std::map<std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node>, double, std::less<std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node> >, std::allocator<std::pair<const std::pair<lemon::ListDigraphBase::Node, lemon::ListDigraphBase::Node>, double> > >&, WeightMap&)':<br />
 <font color="#0000ff">D:\Workspace\preach_prob\prob.cc:602: warning: comparison between signed and unsigned integer expressions</font><br />
-mingw32-g++.exe  -o bin\Debug\preach_prob.exe obj\Debug\prob.o<br />
-Output size is 2.43 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minutes, 2 seconds)</font><br />
+mingw32-g++.exe  -o bin\Release\preach_prob.exe obj\Release\prob.o   -s<br />
+Output size is 376.00 KB<br />
+<font color="#0000ff">Process terminated with status 0 (0 minutes, 3 seconds)</font><br />
 <font color="#0000ff">0 errors, 17 warnings</font><br />
 </tt>
 </body>
